2009-09-16  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/keybindings.c, src/callbacks.c, src/search.c:
   Make Goto Tag commands use the current selection if present (useful
   for selecting part of a tag or for ReST section names with spaces
   in).
 * src/document.c:
   Don't move the cursor when reloading.
 * src/plugindata.h, src/editor.c, src/editor.h:
   Make editor_prefs.snippets hash table private (not a pref).


2009-09-15  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * src/main.c:
   Remove deprecated --debug flag. Please use --verbose/-v instead.


2009-09-15  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/search.c:
   Show Find in Files stderr output in messages window instead of
   debug window so that invalid regex messages can be seen easily.
   Combine FIF stdout and stderr callback code.


2009-09-14  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/utils.c:
   Fix opening filenames beginning with two dots (closes #2858487).
 * src/interface.c, src/highlighting.c, src/prefs.c, src/filetypes.c,
   src/filetypes.h, src/main.c, doc/geany.txt, doc/geany.html,
   data/filetypes.common, geany.glade:
   Update syntax highlighting after changing the 'Invert syntax
   highlighting colors' pref, instead of requiring a restart.
   Remove filetypes.common invert_all option - use 'Invert syntax
   highlighting colors' pref instead (closes #2854525).
 * src/prefs.c, src/dialogs.c, src/dialogs.h:
   Add 'Allow' button when showing the conflicting keybinding dialog.
   Make dialogs_show_question_full() use GTK dialog on Windows if
   button text is not the stock yes/no items.
   Add dialogs_show_prompt() which also has an 'Apply' button.
 * src/queue.c, src/queue.h:
   Add warning that GeanyQueue may be removed.
 * src/keybindings.c, src/editor.c, src/editor.h:
   Change snippet_goto_next_cursor() to
   editor_goto_next_snippet_cursor() as it's in editor.h.
   Avoid using GPOINTER_TO_INT macro.

